<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_light_background"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/common_dark_toolbar" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/default_userinfo_two" />

    <EditText
        android:id="@+id/register_account"
        style="@style/input_info_style"
        android:hint="@string/account" />

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/register_verifyCode"
            style="@style/input_info_style"
            android:layout_width="190dp"
            android:layout_alignParentLeft="true"
            android:hint="@string/input_verifycode" />

        <TextView
            android:id="@+id/send_verity"
            android:layout_width="100dp"
            android:layout_height="@dimen/text_inputBox_height"
            android:layout_alignParentRight="true"
            android:background="@drawable/register_verify_btn"
            android:gravity="center"
            android:text="@string/send_verifycode"
            android:textColor="#ffffff"
            android:textSize="@dimen/login_inputBox_textSize" />
    </RelativeLayout>

    <EditText
        android:id="@+id/register_password"
        style="@style/input_info_style"
        android:layout_marginTop="15dp"
        android:hint="@string/password" />

    <TextView
        android:id="@+id/verify_error"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/icon_warning_origin"
        android:gravity="center_vertical"
        android:text="@string/verifycode_error"
        android:textColor="#FC4956"
        android:textSize="13sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/register_btn"
        android:layout_width="250dp"
        android:layout_height="@dimen/text_inputBox_height"
        android:layout_marginTop="30dp"
        android:background="@drawable/register_btn"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/loginOtherText"
        android:textSize="@dimen/login_inputBox_textSize" />

</LinearLayout>