<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_light_background"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/common_dark_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_dark"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/default_userinfo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/evendy"
            android:textColor="@color/common_white_text"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_steps"
                    android:textColor="@color/common_gray_text"
                    android:textSize="@dimen/mine_little_text" />

                <TextView
                    android:id="@+id/daily_steps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="8000"
                    android:textColor="@color/common_white_text"
                    android:textSize="@dimen/mine_big_text" />
            </LinearLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="50dp"
                android:background="@color/divider" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_mileage"
                    android:textColor="@color/common_gray_text"
                    android:textSize="@dimen/mine_little_text" />

                <TextView
                    android:id="@+id/total_mileage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="10"
                    android:textColor="@color/common_white_text"
                    android:textSize="@dimen/mine_big_text" />
            </LinearLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="50dp"
                android:background="@color/divider" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/standard_number_of_days"
                    android:textColor="@color/common_gray_text"
                    android:textSize="@dimen/mine_little_text" />

                <TextView
                    android:id="@+id/standard_number_of_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="50"
                    android:textColor="@color/common_white_text"
                    android:textSize="@dimen/mine_big_text" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/my_hardware"
                style="@style/menu_title_style"
                android:text="@string/my_hardware" />

            <View style="@style/horizontal_line" />

            <ListView
                android:id="@+id/list_my_hardware"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View style="@style/horizontal_line" />

            <TextView
                style="@style/menu_title_style"
                android:text="@string/my_goal" />

            <View style="@style/horizontal_line" />

            <LinearLayout
                android:id="@+id/menu_sport_goal"
                style="@style/menu_item_line">

                <TextView
                    style="@style/menu_item_style"
                    android:drawableLeft="@drawable/icon_sport_goal"
                    android:text="@string/goal_sport" />

                <TextView
                    android:id="@+id/text_sport_goal"
                    style="@style/menu_item_text_arrow_style"
                    android:text="1000步" />
            </LinearLayout>

            <View style="@style/horizontal_line" />

            <LinearLayout
                android:id="@+id/menu_weight_goal"
                style="@style/menu_item_line">

                <TextView
                    style="@style/menu_item_style"
                    android:drawableLeft="@drawable/icon_weight_goal"
                    android:text="@string/goal_weight" />

                <TextView
                    android:id="@+id/text_weight_goal"
                    style="@style/menu_item_text_arrow_style"
                    android:text="@string/un_set" />
            </LinearLayout>

            <View style="@style/horizontal_line" />

            <TextView
                style="@style/menu_title_style"
                android:text="@string/notify_status" />

            <View style="@style/horizontal_line" />

            <LinearLayout
                android:id="@+id/menu_sport_result_notify"
                style="@style/menu_item_line">

                <TextView
                    style="@style/menu_item_style"
                    android:drawableLeft="@drawable/icon_sport_result_notify"
                    android:text="@string/notify_sport" />

                <TextView
                    android:id="@+id/text_menu_sport_result_notify"
                    style="@style/menu_item_text_arrow_style"
                    android:text="@string/open_no" />
            </LinearLayout>

            <View style="@style/horizontal_line" />

            <LinearLayout
                android:id="@+id/menu_sleep_result_notify"
                style="@style/menu_item_line">

                <TextView
                    style="@style/menu_item_style"
                    android:drawableLeft="@drawable/icon_sleep_result_notify"
                    android:text="@string/notify_sleep" />

                <TextView
                    android:id="@+id/text_sleep_result_notify"
                    style="@style/menu_item_text_arrow_style"
                    android:text="@string/open_no" />
            </LinearLayout>

            <View style="@style/horizontal_line" />

            <TextView
                style="@style/menu_title_style"
                android:text="@string/more" />

            <View style="@style/horizontal_line" />

            <LinearLayout
                android:id="@+id/menu_settings"
                style="@style/menu_item_line">

                <TextView
                    style="@style/menu_item_style"
                    android:drawableLeft="@drawable/icon_settings"
                    android:text="@string/setting" />

                <ImageView style="@style/menu_item_arrow_style" />
            </LinearLayout>

            <View style="@style/horizontal_line" />

            <LinearLayout
                android:id="@+id/menu_friends"
                style="@style/menu_item_line">

                <TextView
                    style="@style/menu_item_style"
                    android:drawableLeft="@drawable/icon_friends"
                    android:text="@string/friends" />

                <ImageView style="@style/menu_item_arrow_style" />
            </LinearLayout>

            <View style="@style/horizontal_line" />

            <LinearLayout
                android:id="@+id/menu_top_list"
                style="@style/menu_item_line">

                <TextView
                    style="@style/menu_item_style"
                    android:drawableLeft="@drawable/icon_status_steps"
                    android:text="@string/top" />

                <ImageView style="@style/menu_item_arrow_style" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>