<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/white_corner_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/view_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/white_gray_btn_top"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="60dp"
        android:paddingTop="15dp"
        android:text="@string/day"
        android:textColor="@color/common_dark_text"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/view_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/white_gray_btn"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="60dp"
        android:paddingTop="15dp"
        android:text="@string/week"
        android:textColor="@color/common_dark_text"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/view_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/white_gray_btn_bottom"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="60dp"
        android:paddingTop="15dp"
        android:text="@string/month"
        android:textColor="@color/common_dark_text"
        android:textSize="23sp"
        android:textStyle="bold" />


</LinearLayout>